@@ -66,6 +66,8 @@ void Fl_Tile::position(int oix, int oiy, int newx, int newy) {
 
 // move the lower-right corner (sort of):
 void Fl_Tile::resize(int X,int Y,int W,int H) {
+  //Fl_Group::resize(X, Y, W, H);
+  //return;
   // remember how much to move the child widgets:
   int dx = X-x();
   int dy = Y-y();
@@ -92,7 +94,9 @@ void Fl_Tile::resize(int X,int Y,int W,int H) {
     int B = yy+o->h();
     if (*p++ >= OB) yy += dh; else if (yy > NB) yy = NB;
     if (*p++ >= OB) B += dh; else if (B > NB) B = NB;
-    o->resize(xx,yy,R-xx,B-yy); o->redraw();
+    o->resize(xx,yy,R-xx,B-yy);
+    // do *not* call o->redraw() here! If you do, and the tile is inside a 
+    // scroll, it'll set the damage areas wrong for all children!
   }
 }
 
