@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.1.8
 
+	- Fixed drawing issues of a tile in a scroll (STR #1507) 
 	- Fixed dismissing buttons in menu bars (STR #1494) 
 	- Making a child group visible in a Fl_Tabs or Fl_Wizard
 	  group now shows that tab or pane.
